# sortings

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: file_read.h  sortings.h
src/: main.c  read_file_API.c  read_file_mmap.c  sortings.c
